# instructmd

./: .gitignore  README.md  VISION.md  astro.config.mjs  package-lock.json  package.json
.github/workflows/: deploy-pages.yml  rust-ci.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs  model.rs  tests.rs
cli/src/resolvers/: amp.rs  claude.rs  codex.rs  gemini.rs  goose.rs  mod.rs  opencode.rs  pi.rs  qwen.rs
cli/tests/: verbose.rs
docs/: agent-instruction-discovery.html  agent-instruction-discovery.md  prompt-composition-research.md
docs/harnesses/: README.md  amp.md  claude-code.md  codex.md  gemini.md  goose.md  opencode.md  pi.md  qwen.md
src/layouts/: Layout.astro
src/pages/: index.astro
src/styles/: global.css
